# qt5-data-selector

./: .gitignore  CLEANUP_SUMMARY.md  CMakeLists.txt  GITHUB_INFO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  TROUBLESHOOTING.md  build.sh  check_dependencies.sh  demo.sh  project.conf  qt5-data-selector.desktop  qt5-data-selector.pro  resources.qrc  run.sh  run_demo.sh
.kiro/specs/qt5-data-selector/: design.md  requirements.md  tasks.md
include/: CustomButton.h  DeviceInfo.h  DeviceManager.h  DeviceWidget.h  MainWindow.h  TimeWidget.h
resources/: .gitkeep  styles.qss
src/: CustomButton.cpp  DeviceManager.cpp  DeviceWidget.cpp  MainWindow.cpp  TimeWidget.cpp  main.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: test_mainwindow_integration.cpp
tests/unit/: test_custombutton_unit.cpp  test_devicewidget_unit.cpp  test_simple_unit.cpp  test_timewidget_unit.cpp
